# CSAutopilot

./: .gitignore  README.md
customer-support-autopilot/: .gitignore  AUDIT.md  BUILD.md  GAP_ANALYSIS.md  Makefile  README.md  docker-compose.yml
customer-support-autopilot/backend/: pyproject.toml  requirements.txt
customer-support-autopilot/backend/app/: config.py  main.py
customer-support-autopilot/backend/app/api/: chat.py  email.py  webhooks.py
customer-support-autopilot/backend/app/core/: classifier.py  fallback.py  orchestrator.py  rag_engine.py
customer-support-autopilot/backend/app/integrations/: embeddings.py  groq_client.py  redis_client.py  vector_db.py
customer-support-autopilot/backend/app/tools/: email_tools.py  knowledge_base.py  shopify.py  stripe.py
customer-support-autopilot/backend/app/utils/: logging.py  rate_limiter.py
customer-support-autopilot/backend/tests/: test_orchestrator.py
customer-support-autopilot/frontend/: Dockerfile  next.config.js  package.json
customer-support-autopilot/frontend/app/: globals.css  layout.tsx  page.tsx
customer-support-autopilot/frontend/app/api/chat/: route.ts
customer-support-autopilot/frontend/app/components/: ChatWidget.tsx  MessageBubble.tsx  OrderLookup.tsx
customer-support-autopilot/frontend/app/dashboard/: analytics.tsx  page.tsx
customer-support-autopilot/frontend/public/: widget.js
customer-support-autopilot/knowledge_base/: faqs.md
customer-support-autopilot/scripts/: run_migrations.py  seed_kb.py
